# Waveshare-ESP32-components

./: README.md
.github/scripts/: build_changed_component.py  component_self_check.py
.github/workflows/: component_self_check.yml  upload_component.yml
bsp/esp32_c5_lcd_1_47/: CMakeLists.txt  Kconfig  README.md  esp32_c5_lcd_1_47.c  idf_component.yml
bsp/esp32_c5_lcd_1_47/include/bsp/: config.h  display.h  esp-bsp.h  esp32_c5_lcd_1_47.h  touch.h
bsp/esp32_c6_touch_amoled_1_32/: CMakeLists.txt  Kconfig  README.md  esp32_c6_touch_amoled_1_32.c  idf_component.yml
bsp/esp32_c6_touch_amoled_2_06/: CMakeLists.txt  Kconfig  README.md  esp32_c6_touch_amoled_2_06.c  idf_component.yml
bsp/esp32_c6_touch_amoled_2_06/include/bsp/: display.h  esp-bsp.h  esp32_c6_touch_amoled_2_06.h
bsp/esp32_p4_nano/: CMakeLists.txt  Kconfig  README.md  esp32_p4_nano.c  idf_component.yml
bsp/esp32_p4_platform/: CMakeLists.txt  Kconfig  README.md  esp32_p4_platform.c  idf_component.yml
bsp/esp32_p4_wifi6_touch_lcd_4b/: CMakeLists.txt  esp32_p4_wifi6_touch_lcd_4b.c  idf_component.yml
bsp/esp32_p4_wifi6_touch_lcd_7b/: CMakeLists.txt  Kconfig  README.md  esp32_p4_wifi6_touch_lcd_7b.c  idf_component.yml
bsp/esp32_p4_wifi6_touch_lcd_x/: CMakeLists.txt  Kconfig  README.md  esp32_p4_wifi6_touch_lcd_x.c  idf_component.yml
bsp/esp32_p4_wifi6_touch_lcd_x/priv_include/: bsp_err_check.h
bsp/esp32_p4_wifi6_touch_lcd_xc/: CMakeLists.txt  Kconfig  README.md  esp32_p4_wifi6_touch_lcd_xc.c  idf_component.yml
bsp/esp32_p4_wifi6_touch_lcd_xc/include/bsp/: display.h  esp-bsp.h  esp32_p4_wifi6_touch_lcd_xc.h
bsp/esp32_s3_cam_ovxxxx/: CMakeLists.txt  Kconfig  README.md  esp32_s3_cam_ovxxxx.c  idf_component.yml
bsp/esp32_s3_cam_ovxxxx/include/bsp/: display.h  esp-bsp.h  esp32_s3_cam_ovxxxx.h
bsp/esp32_s3_cam_xxxx/: CMakeLists.txt  Kconfig  README.md  esp32_s3_cam_xxxx.c  idf_component.yml
bsp/esp32_s3_lr1121_oled_1_54/: .component_hash  CMakeLists.txt  Kconfig  LICENSE  README.md  esp32_s3_lr1121_oled_1_54.c  idf_component.yml
bsp/esp32_s3_lr1121_oled_1_54/include/bsp/: buttons.h  display.h  esp-bsp.h  esp32_s3_lr1121_oled_1_54.h
bsp/esp32_s3_touch_amoled_1_32/: CMakeLists.txt  Kconfig  README.md  esp32_s3_touch_amoled_1_32.c  idf_component.yml
bsp/esp32_s3_touch_amoled_1_75/: CMakeLists.txt  Kconfig  README.md  esp32_s3_touch_amoled_1_75.c  idf_component.yml
bsp/esp32_s3_touch_amoled_1_75/include/bsp/: display.h  esp-bsp.h  esp32_s3_touch_amoled_1_75.h
bsp/esp32_s3_touch_amoled_1_8/: CMakeLists.txt  Kconfig  README.md  esp32_s3_touch_amoled_1_8.c  esp32_s3_touch_amoled_1_8_bsp.c  esp32_s3_touch_amoled_1_8_bsp_idf4.c  esp32_s3_touch_amoled_1_8_bsp_idf5.c  idf_component.yml
bsp/esp32_s3_touch_amoled_1_8/include/bsp/: display.h  esp-bsp.h  esp32_s3_touch_amoled_1_8.h
bsp/esp32_s3_touch_amoled_2_06/: CMakeLists.txt  esp32_s3_touch_amoled_2_06.c  idf_component.yml
bsp/esp32_s3_touch_amoled_2_16/: CMakeLists.txt  Kconfig  README.md  esp32_s3_touch_amoled_2_16.c  idf_component.yml
bsp/esp32_s3_touch_amoled_2_16/priv_include/: bsp_err_check.h
bsp/esp32_s3_touch_lcd_1_69/: CMakeLists.txt  README.md  esp32_s3_touch_lcd_1_69.c  idf_component.yml
bsp/esp32_s3_touch_lcd_1_83/: CMakeLists.txt  Kconfig  README.md  esp32_s3_touch_lcd_1_83.c  idf_component.yml
bsp/esp32_s3_touch_lcd_1_85C_V2/: CMakeLists.txt  Kconfig  README.md  esp32_s3_touch_lcd_1_85C_V2.c  idf_component.yml
bsp/esp32_s3_touch_lcd_2_8d/: CMakeLists.txt  Kconfig  README.md  esp32_s3_touch_lcd_2_8d.c  idf_component.yml
bsp/esp32_s3_touch_lcd_4/: CMakeLists.txt  README.md  esp32_s3_touch_lcd_4.c  idf_component.yml
bsp/esp32_s3_touch_lcd_4_3c/: CMakeLists.txt  Kconfig  README.md  esp32_s3_touch_lcd_4_3c.c  idf_component.yml
bsp/esp32_s3_touch_lcd_4b/: CMakeLists.txt  Kconfig  README.md  esp32_s3_touch_lcd_4b.c  idf_component.yml
display/lcd/esp_lcd_axs15260d/: CMakeLists.txt  Kconfig  README.md  esp_lcd_axs15260d.c  idf_component.yml
display/lcd/esp_lcd_dsi/: CHANGELOG.md  CMakeLists.txt  README.md  esp_lcd_dsi.c  idf_component.yml
display/lcd/esp_lcd_hi8561/: CMakeLists.txt  README.md  esp_lcd_hi8561.c  idf_component.yml
display/lcd/esp_lcd_hx8394/: CHANGELOG.md  CMakeLists.txt  README.md  esp_lcd_hx8394.c  idf_component.yml
display/lcd/esp_lcd_ili9881c/: CMakeLists.txt  README.md  esp_lcd_ili9881c.c  idf_component.yml
display/lcd/esp_lcd_jd9165/: CHANGELOG.md  CMakeLists.txt  README.md  esp_lcd_jd9165.c  idf_component.yml
display/lcd/esp_lcd_jd9165/include/: esp_lcd_jd9165.h
display/lcd/esp_lcd_jd9165/test_apps/: CMakeLists.txt
display/lcd/esp_lcd_jd9165/test_apps/main/: CMakeLists.txt  test_esp_lcd_jd9165.c
display/lcd/esp_lcd_jd9365/: CMakeLists.txt  README.md  esp_lcd_jd9365.c  idf_component.yml
display/lcd/esp_lcd_jd9365_10_1/: CHANGELOG.md  CMakeLists.txt  README.md  esp_lcd_jd9365_10_1.c  (+1 more)
display/lcd/esp_lcd_jd9365_10_1/test_apps/main/: CMakeLists.txt  idf_component.yml  test_esp_lcd_jd9365.c
display/lcd/esp_lcd_jd9365_8/: CHANGELOG.md  CMakeLists.txt  README.md  esp_lcd_jd9365_8.c  idf_component.yml
display/lcd/esp_lcd_jd9365_8/include/: esp_lcd_jd9365_8.h
display/lcd/esp_lcd_jd9365_8/test_apps/main/: CMakeLists.txt  idf_component.yml  test_esp_lcd_jd9365.c
display/lcd/esp_lcd_st7735/: .component_hash  CHECKSUMS.json  CMakeLists.txt  README.md  esp_lcd_st7735.c  idf_component.yml
display/lcd/esp_lcd_st7735/test_apps/: CMakeLists.txt
display/lcd/esp_lcd_st7735/test_apps/main/: CMakeLists.txt  idf_component.yml  test_esp_lcd_st7735.c
lora/esp_lora_1121/: CMakeLists.txt  README.md  idf_component.yml
lora/esp_lora_1121/test_app/main/: CMakeLists.txt
sensor/custom_io_expander_ch32v003/: .component_hash  CMakeLists.txt  README.md  custom_io_expander_ch32v003.c  idf_component.yml
sensor/pcf85063a/: CMakeLists.txt  README.md  idf_component.yml  pcf85063a.c
sensor/pcf85063a/test_app/main/: CMakeLists.txt  idf_component.yml  test_pcf85063a.c
sensor/qmi8658/: CMakeLists.txt  README.md  idf_component.yml  qmi8658.c
tests/: test_invariant_esp32_s3_cam_ovxxxx.c
(+192 files in other folders)
